# serializer version: 1
# name: test_get_stack
  dict({
    'additional_files': None,
    'auto_update': None,
    'created_by': 'admin',
    'creation_date': 1704067200,
    'endpoint_id': 1,
    'entry_point': 'docker-compose.yml',
    'env': list([
      dict({
        'name': 'NODE_ENV',
        'value': 'production',
      }),
      dict({
        'name': 'PORT',
        'value': '3000',
      }),
    ]),
    'from_app_template': False,
    'git_config': None,
    'id': 1,
    'name': 'my-web-app',
    'namespace': '',
    'option': dict({
      'prune': False,
    }),
    'project_path': '/data/compose/my-web-app',
    'resource_control': dict({
      'administrators_only': False,
      'id': 1,
      'owner_id': None,
      'public': False,
      'resource_id': '1_my-web-app',
      'sub_resource_ids': list([
      ]),
      'system': False,
      'team_accesses': list([
      ]),
      'type': 6,
      'user_accesses': list([
      ]),
    }),
    'status': 1,
    'swarm_id': '',
    'type': 2,
    'update_date': 1704153600,
    'updated_by': 'admin',
  })
# ---
# name: test_get_stack_containers
  list([
    dict({
      'command': '/bin/bash',
      'created': '1739811096',
      'host_config': dict({
        'annotations': None,
        'network_mode': 'mynetwork',
      }),
      'id': 'aa86eacfb3b3ed4cd362c1e88fc89a53908ad05fb3a4103bca3f9b28292d14bf',
      'image': 'docker.io/library/ubuntu:latest',
      'image_id': 'sha256:72297848456d5d37d1262630108ab308d3e9ec7ed1c3286a32fe09856619a782',
      'image_manifest_descriptor': dict({
        'annotations': dict({
          'com.docker.official-images.bashbrew.arch': 'amd64',
          'org.opencontainers.image.base.digest': 'sha256:0d0ef5c914d3ea700147da1bd050c59edb8bb12ca312f3800b29d7c8087eabd8',
          'org.opencontainers.image.base.name': 'scratch',
          'org.opencontainers.image.created': '2025-01-27T00:00:00Z',
          'org.opencontainers.image.revision': '9fabb4bad5138435b01857e2fe9363e2dc5f6a79',
          'org.opencontainers.image.source': 'https://git.launchpad.net/cloud-images/+oci/ubuntu-base',
          'org.opencontainers.image.url': 'https://hub.docker.com/_/ubuntu',
          'org.opencontainers.image.version': '24.04',
        }),
        'artifact_type': None,
        'data': None,
        'digest': 'sha256:c0537ff6a5218ef531ece93d4984efc99bbf3f7497c0a7726c88e2bb7584dc96',
        'media_type': 'application/vnd.oci.image.manifest.v1+json',
        'platform': dict({
          'architecture': 'arm',
          'os': 'windows',
          'os_features': list([
            'win32k',
          ]),
          'os_version': '10.0.19041.1165',
          'variant': 'v7',
        }),
        'size': 424,
        'urls': list([
          'http://example.com',
        ]),
      }),
      'labels': dict({
        'com.example.license': 'GPL',
        'com.example.vendor': 'Acme',
        'com.example.version': '1.0',
      }),
      'mounts': list([
        dict({
          'destination': '/usr/share/nginx/html/',
          'driver': 'local',
          'mode': 'z',
          'name': 'myvolume',
          'propagation': '',
          'rw': True,
          'source': '/var/lib/docker/volumes/myvolume/_data',
          'type': 'volume',
        }),
      ]),
      'names': list([
        '/funny_chatelet',
      ]),
      'network_settings': dict({
        'networks': dict({
          'property1': dict({
            'aliases': list([
              'server_x',
              'server_y',
            ]),
            'dns_names': list([
              'foobar',
              'server_x',
              'server_y',
              'my.ctr',
            ]),
            'driver_opts': dict({
              'com.example.some-label': 'some-value',
              'com.example.some-other-label': 'some-other-value',
            }),
            'endpoint_id': 'b88f5b905aabf2893f3cbc4ee42d1ea7980bbc0a92e2c8922b1e1795298afb0b',
            'gateway': '172.17.0.1',
            'global_ipv6_address': '2001:db8::5689',
            'global_ipv6_prefix_len': 64,
            'ip_address': '172.17.0.4',
            'ip_prefix_len': 16,
            'ipam_config': dict({
              'ipv4_address': '172.20.30.33',
              'ipv6_address': '2001:db8:abcd::3033',
              'link_local_ips': list([
                '169.254.34.68',
                'fe80::3468',
              ]),
            }),
            'ipv6_gateway': '2001:db8:2::100',
            'links': list([
              'container_1',
              'container_2',
            ]),
            'mac_address': '02:42:ac:11:00:04',
            'network_id': '08754567f1f40222263eab4102e1c733ae697e8e354aa9cd6e18d7402835292a',
          }),
          'property2': dict({
            'aliases': list([
              'server_x',
              'server_y',
            ]),
            'dns_names': list([
              'foobar',
              'server_x',
              'server_y',
              'my.ctr',
            ]),
            'driver_opts': dict({
              'com.example.some-label': 'some-value',
              'com.example.some-other-label': 'some-other-value',
            }),
            'endpoint_id': 'b88f5b905aabf2893f3cbc4ee42d1ea7980bbc0a92e2c8922b1e1795298afb0b',
            'gateway': '172.17.0.1',
            'global_ipv6_address': '2001:db8::5689',
            'global_ipv6_prefix_len': 64,
            'ip_address': '172.17.0.4',
            'ip_prefix_len': 16,
            'ipam_config': dict({
              'ipv4_address': '172.20.30.33',
              'ipv6_address': '2001:db8:abcd::3033',
              'link_local_ips': list([
                '169.254.34.68',
                'fe80::3468',
              ]),
            }),
            'ipv6_gateway': '2001:db8:2::100',
            'links': list([
              'container_1',
              'container_2',
            ]),
            'mac_address': '02:42:ac:11:00:04',
            'network_id': '08754567f1f40222263eab4102e1c733ae697e8e354aa9cd6e18d7402835292a',
          }),
        }),
      }),
      'ports': list([
        dict({
          'private_port': 8080,
          'public_port': 80,
          'type': 'tcp',
        }),
      ]),
      'size_root_fs': '1653948416',
      'size_rw': '122880',
      'state': 'running',
      'status': 'Up 4 days',
    }),
  ])
# ---
# name: test_get_stacks
  list([
    dict({
      'additional_files': None,
      'auto_update': None,
      'created_by': 'admin',
      'creation_date': 1704067200,
      'endpoint_id': 1,
      'entry_point': 'docker-compose.yml',
      'env': list([
        dict({
          'name': 'NODE_ENV',
          'value': 'production',
        }),
        dict({
          'name': 'PORT',
          'value': '3000',
        }),
      ]),
      'from_app_template': False,
      'git_config': None,
      'id': 1,
      'name': 'my-web-app',
      'namespace': '',
      'option': dict({
        'prune': False,
      }),
      'project_path': '/data/compose/my-web-app',
      'resource_control': dict({
        'administrators_only': False,
        'id': 1,
        'owner_id': None,
        'public': False,
        'resource_id': '1_my-web-app',
        'sub_resource_ids': list([
        ]),
        'system': False,
        'team_accesses': list([
        ]),
        'type': 6,
        'user_accesses': list([
        ]),
      }),
      'status': 1,
      'swarm_id': '',
      'type': 2,
      'update_date': 1704153600,
      'updated_by': 'admin',
    }),
    dict({
      'additional_files': None,
      'auto_update': None,
      'created_by': 'admin',
      'creation_date': 1703980800,
      'endpoint_id': 1,
      'entry_point': 'docker-compose.yml',
      'env': list([
        dict({
          'name': 'POSTGRES_PASSWORD',
          'value': 'secret',
        }),
      ]),
      'from_app_template': False,
      'git_config': dict({
        'authentication': dict({
          'authorization_type': <GitCredentialAuthType.BASIC: 0>,
          'git_credential_id': 0,
          'password': '',
          'username': '',
        }),
        'config_file_path': 'docker-compose.yml',
        'config_hash': 'abc123def456',
        'reference_name': 'refs/heads/main',
        'tls_skip_verify': False,
        'url': 'https://github.com/example/database-stack.git',
      }),
      'id': 2,
      'name': 'database-stack',
      'namespace': '',
      'option': None,
      'project_path': '/data/compose/database-stack',
      'resource_control': None,
      'status': 2,
      'swarm_id': '',
      'type': 2,
      'update_date': 0,
      'updated_by': '',
    }),
    dict({
      'additional_files': list([
        'config/nginx.conf',
        'config/app.env',
      ]),
      'auto_update': dict({
        'force_pull_image': True,
        'force_update': False,
        'interval': '5m',
        'job_id': '42',
        'webhook': '550e8400-e29b-41d4-a716-446655440000',
      }),
      'created_by': 'devops',
      'creation_date': 1703894400,
      'endpoint_id': 1,
      'entry_point': 'docker-compose.yml',
      'env': list([
      ]),
      'from_app_template': True,
      'git_config': None,
      'id': 3,
      'name': 'swarm-service',
      'namespace': '',
      'option': dict({
        'prune': True,
      }),
      'project_path': '/data/compose/swarm-service',
      'resource_control': None,
      'status': 1,
      'swarm_id': 'jpofkc0i9uo9wtx1zesuk649w',
      'type': 1,
      'update_date': 1704240000,
      'updated_by': 'devops',
    }),
  ])
# ---
# name: test_get_stacks_empty
  list([
  ])
# ---
# name: test_get_stacks_with_endpoint_filter
  list([
    dict({
      'additional_files': None,
      'auto_update': None,
      'created_by': 'admin',
      'creation_date': 1704067200,
      'endpoint_id': 1,
      'entry_point': 'docker-compose.yml',
      'env': list([
        dict({
          'name': 'NODE_ENV',
          'value': 'production',
        }),
        dict({
          'name': 'PORT',
          'value': '3000',
        }),
      ]),
      'from_app_template': False,
      'git_config': None,
      'id': 1,
      'name': 'my-web-app',
      'namespace': '',
      'option': dict({
        'prune': False,
      }),
      'project_path': '/data/compose/my-web-app',
      'resource_control': dict({
        'administrators_only': False,
        'id': 1,
        'owner_id': None,
        'public': False,
        'resource_id': '1_my-web-app',
        'sub_resource_ids': list([
        ]),
        'system': False,
        'team_accesses': list([
        ]),
        'type': 6,
        'user_accesses': list([
        ]),
      }),
      'status': 1,
      'swarm_id': '',
      'type': 2,
      'update_date': 1704153600,
      'updated_by': 'admin',
    }),
    dict({
      'additional_files': None,
      'auto_update': None,
      'created_by': 'admin',
      'creation_date': 1703980800,
      'endpoint_id': 1,
      'entry_point': 'docker-compose.yml',
      'env': list([
        dict({
          'name': 'POSTGRES_PASSWORD',
          'value': 'secret',
        }),
      ]),
      'from_app_template': False,
      'git_config': dict({
        'authentication': dict({
          'authorization_type': <GitCredentialAuthType.BASIC: 0>,
          'git_credential_id': 0,
          'password': '',
          'username': '',
        }),
        'config_file_path': 'docker-compose.yml',
        'config_hash': 'abc123def456',
        'reference_name': 'refs/heads/main',
        'tls_skip_verify': False,
        'url': 'https://github.com/example/database-stack.git',
      }),
      'id': 2,
      'name': 'database-stack',
      'namespace': '',
      'option': None,
      'project_path': '/data/compose/database-stack',
      'resource_control': None,
      'status': 2,
      'swarm_id': '',
      'type': 2,
      'update_date': 0,
      'updated_by': '',
    }),
    dict({
      'additional_files': list([
        'config/nginx.conf',
        'config/app.env',
      ]),
      'auto_update': dict({
        'force_pull_image': True,
        'force_update': False,
        'interval': '5m',
        'job_id': '42',
        'webhook': '550e8400-e29b-41d4-a716-446655440000',
      }),
      'created_by': 'devops',
      'creation_date': 1703894400,
      'endpoint_id': 1,
      'entry_point': 'docker-compose.yml',
      'env': list([
      ]),
      'from_app_template': True,
      'git_config': None,
      'id': 3,
      'name': 'swarm-service',
      'namespace': '',
      'option': dict({
        'prune': True,
      }),
      'project_path': '/data/compose/swarm-service',
      'resource_control': None,
      'status': 1,
      'swarm_id': 'jpofkc0i9uo9wtx1zesuk649w',
      'type': 1,
      'update_date': 1704240000,
      'updated_by': 'devops',
    }),
  ])
# ---
# name: test_get_stacks_with_swarm_filter
  list([
    dict({
      'additional_files': None,
      'auto_update': None,
      'created_by': None,
      'creation_date': None,
      'endpoint_id': 1,
      'entry_point': None,
      'env': None,
      'from_app_template': None,
      'git_config': None,
      'id': 3,
      'name': 'swarm-service',
      'namespace': None,
      'option': None,
      'project_path': None,
      'resource_control': None,
      'status': 1,
      'swarm_id': 'jpofkc0i9uo9wtx1zesuk649w',
      'type': 1,
      'update_date': None,
      'updated_by': None,
    }),
  ])
# ---
# name: test_start_stack
  dict({
    'additional_files': None,
    'auto_update': None,
    'created_by': 'admin',
    'creation_date': 1704067200,
    'endpoint_id': 1,
    'entry_point': 'docker-compose.yml',
    'env': list([
      dict({
        'name': 'NODE_ENV',
        'value': 'production',
      }),
      dict({
        'name': 'PORT',
        'value': '3000',
      }),
    ]),
    'from_app_template': False,
    'git_config': None,
    'id': 1,
    'name': 'my-web-app',
    'namespace': '',
    'option': dict({
      'prune': False,
    }),
    'project_path': '/data/compose/my-web-app',
    'resource_control': dict({
      'administrators_only': False,
      'id': 1,
      'owner_id': None,
      'public': False,
      'resource_id': '1_my-web-app',
      'sub_resource_ids': list([
      ]),
      'system': False,
      'team_accesses': list([
      ]),
      'type': 6,
      'user_accesses': list([
      ]),
    }),
    'status': 1,
    'swarm_id': '',
    'type': 2,
    'update_date': 1704153600,
    'updated_by': 'admin',
  })
# ---
# name: test_stop_stack
  dict({
    'additional_files': None,
    'auto_update': None,
    'created_by': 'admin',
    'creation_date': 1704067200,
    'endpoint_id': 1,
    'entry_point': 'docker-compose.yml',
    'env': list([
      dict({
        'name': 'NODE_ENV',
        'value': 'production',
      }),
    ]),
    'from_app_template': False,
    'git_config': None,
    'id': 1,
    'name': 'my-web-app',
    'namespace': '',
    'option': None,
    'project_path': '/data/compose/my-web-app',
    'resource_control': None,
    'status': 2,
    'swarm_id': '',
    'type': 2,
    'update_date': 1704153600,
    'updated_by': 'admin',
  })
# ---
